- Move to Java 21   - Refactoring using new features   - Add IterableComponent marker interface   - Add Where Parsing